# Odd-Engine

./: .clang-format  .gitignore  LICENSE  README.md  build.ps1  build.sh  main.cpp  meson.build  requirements.txt
.github/workflows/: build.yml  windows-build-mingw.yml  windows-build-msvc.yml
SFML/: .clang-format
graphics/: meson.build
graphics/include/: Image.h  meson.build
graphics/src/: Image.cpp  meson.build
scripts/: install_wraps.py
utilities/: meson.build
utilities/include/: Logger.h  meson.build
utilities/src/: Logger.cpp  file_globber.py  meson.build
